# syodep

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bucket/: syodep.json
config/: default-config.toml
crates/syodep-config/: Cargo.toml
crates/syodep-config/src/: keys.rs  lib.rs
crates/syodep-core/: Cargo.toml
crates/syodep-core/src/: app.rs  caret.rs  command.rs  input.rs  layout.rs  lib.rs  render_cache.rs
crates/syodep-ffi/: Cargo.toml  build.rs
crates/syodep-ffi/src/: lib.rs
crates/syodep-pdf/: Cargo.toml
crates/syodep-pdf/examples/: make_fixture.rs
crates/syodep-pdf/src/: lib.rs  test_support.rs
crates/syodep-storage/: Cargo.toml
crates/syodep-storage/src/: lib.rs  migrations.rs
docs/: architecture.md  commands-caret-focus-mode.md  commands-line-focus-mode.md  commands-normal-mode.md  commands-paragraph-focus-mode.md  commands-sentence-focus-mode.md  commands-word-focus-mode.md  commands.md  config.md  development-log.md  keybindings.md  packaging.md  roadmap.md  testing.md
packaging/: syodep.desktop
scripts/: check-docs.sh
ui-qt/: CMakeLists.txt
ui-qt/src/: canvas_widget.cpp  canvas_widget.h  diagnostics.cpp  diagnostics.h  key_encoder.cpp  key_encoder.h  main.cpp  main_window.cpp  main_window.h
