[package]
name = "syodep-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite persistence for syodep: documents, positions, future annotations"

[dependencies]
rusqlite = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
